# BRENDWALL_TC

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
nginx/: nginx.conf
products/: models.py  tests.py  urls.py  views.py
products/api/: api.py  endpoints.py  serializers.py
products/migrations/: 0001_initial.py
products/templates/products/: index.html
static/: script.js
